--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.salvo.copychat",
-  "appName": "CopyChat",
+  "appId": "com.salvo.unstuck",
+  "appName": "UnStuck",
   "webDir": "www"
 }
